--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,40 +1,38 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "New project",
-  "architectural_notes": [
-    "Add front-end validation gating to prevent progression until required geography fields are selected, with user-facing error messaging."
-  ],
+  "summary": "Website/app UI and membership flow: refine Secretary lookup flow, adjust navbar branding colors/hover states, and change \"Get Started\" to trigger member login then switch to a user profile menu when authenticated.",
+  "architectural_notes": [],
   "known_issues": [],
-  "isFixRequest": true,
+  "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-prevent-form-progression-submission-in-the-create-instance-proposal-flow-when-the-required-geography-selections-are-missing-state-always-required-county-required-when-a-county-place-selection-is-in-progress-place-required-when-a-place-selection-is-in-progress-and-ensure-the-user-can-trigger-validation-feedback-even-if-the-form-is-otherwise-incomplete",
-      "title": "Prevent form progression/submission in the Create Instance Proposal flow when the required geography selections are missing (state always required; county required when a county/place selection is in-progress; place required when a place selection is in-progress), and ensure the user can trigger validation feedback even if the form is otherwise incomplete.",
+      "id": "feature-update-the-top-navigation-bar-branding-colors-keep-using-the-existing-teal-logo-svg-render-the-whisper-wordmark-text-in-white-and-render-all-menu-item-labels-in-white-by-default-with-teal-styling-on-hover-rollover-and-when-selected-active",
+      "title": "Update the top navigation bar branding colors: keep using the existing teal logo SVG, render the “Whisper” wordmark text in white, and render all menu item labels in white by default with teal styling on hover/rollover and when selected/active.",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-display-a-clear-simple-english-validation-message-telling-the-user-what-geography-selection-s-they-must-make-before-continuing-and-visually-indicate-which-geography-field-is-missing",
-      "title": "Display a clear, simple, English validation message telling the user what geography selection(s) they must make before continuing, and visually indicate which geography field is missing.",
+      "id": "feature-change-the-header-get-started-cta-behavior-so-that-when-the-user-is-not-authenticated-it-triggers-internet-identity-login-becoming-a-site-member-rather-than-scrolling-to-a-page-section-or-initiating-instance-creation-chat-flows",
+      "title": "Change the header “Get Started” CTA behavior so that when the user is not authenticated it triggers Internet Identity login (becoming a site member) rather than scrolling to a page section or initiating instance creation/chat flows.",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-change-the-static-fixed-top-menu-logo-bar-homeheader-background-color-to-solid-black-while-keeping-existing-layout-and-ensuring-readable-contrast-for-the-logo-and-button",
-      "title": "Change the static (fixed) top menu / logo bar (HomeHeader) background color to solid black while keeping existing layout and ensuring readable contrast for the logo and button.",
+      "id": "feature-when-the-user-is-authenticated-replace-the-header-get-started-cta-with-a-user-profile-entry-that-shows-the-user-s-profile-image-fallback-if-none-and-label-and-opens-a-submenu-with-at-least-profile-navigates-to-profile-and-logout-logs-out-and-clears-cached-queries",
+      "title": "When the user is authenticated, replace the header “Get Started” CTA with a user profile entry that shows the user’s profile image (fallback if none) and label, and opens a submenu with at least: “Profile” (navigates to /profile) and “Logout” (logs out and clears cached queries).",
       "reqIds": [
         "REQ-3"
       ],
       "version": 1
     },
     {
-      "id": "feature-use-the-provided-direct-image-url-as-the-homepage-hero-background-image-and-bottom-justify-the-image-align-to-bottom-within-the-hero-section",
-      "title": "Use the provided direct image URL as the homepage hero background image and bottom-justify the image (align to bottom) within the hero section.",
+      "id": "feature-refine-the-secretary-lookup-discovery-flow-to-avoid-auto-navigation-side-effects-and-make-the-outcome-explicit-after-the-user-selects-state-county-or-city-show-a-clear-result-message-and-present-explicit-next-action-buttons-e-g-view-existing-instance-when-found-or-create-an-instance-proposal-when-not-found-without-automatically-navigating-after-a-timeout",
+      "title": "Refine the Secretary “lookup/discovery” flow to avoid auto-navigation side effects and make the outcome explicit: after the user selects state + county or city, show a clear result message and present explicit next-action buttons (e.g., “View existing instance” when found, or “Create an instance proposal” when not found), without automatically navigating after a timeout.",
       "reqIds": [
         "REQ-4"
       ],
@@ -44,30 +42,30 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Block user progression when required geography fields are not selected",
+      "summary": "Refine the Secretary’s lookup flow",
       "reqIds": [],
       "status": "pending"
     },
     {
       "id": "AR-2",
-      "summary": "Display a clear message telling the user which geography selections are required",
+      "summary": "Navbar branding styling: keep logo teal; set Whisper text and menu items white; teal on hover/selected",
       "reqIds": [],
       "status": "pending"
     },
     {
       "id": "AR-3",
-      "summary": "Set static menu and logo bar background color to black",
+      "summary": "Change \"Get Started\" to open member login (not instance activation/chat)",
       "reqIds": [],
       "status": "pending"
     },
     {
       "id": "AR-4",
-      "summary": "Use provided direct image URL as the hero image and bottom-justify it",
+      "summary": "After login, replace \"Get Started\" with user profile image/name and submenu",
       "reqIds": [],
       "status": "pending"
     }
   ],
-  "projectName": "Geography validation guard + header styling + bottom-justified hero image",
+  "projectName": "Refine Secretary lookup flow and update navbar membership CTA + branding colors",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
