--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,36 +1,28 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Whisper: implement user profile UI (profile view + edit flow) using existing React + Tailwind frontend and minimal profile-specific integration; user requested executing steps 1–3 of the 5-step plan.",
+  "summary": "Whisper decentralized civic engagement platform: add Secretary-specific geography/issue query endpoints, add similar-city-name search, and add secretary logic to verify whether a city/county/state instance exists; current build shows a white screen likely related to a draft-editor 'disallowed origin' error from draft-script.js.",
   "architectural_notes": [
-    "Frontend stack: React + Tailwind.",
-    "Backend context: single Motoko canister; stable memory for persistent profile data (backend work not requested yet in steps 1–3).",
-    "Scope constraint: implement steps 1–3 only (UI routes, profile view, edit form); avoid unrelated systems."
+    "Secretary features should be added via new clean entry points (do not modify existing geography data or existing query endpoints)."
   ],
-  "known_issues": [],
-  "isFixRequest": false,
+  "known_issues": [
+    "App shows white screen; console error from draft-script.js: 'draft-editor:error disallowed origin' for https://just-olive-eim-draft.caffeine.xyz (postMessage/EditCommunicator/initEditor stack)."
+  ],
+  "isFixRequest": true,
   "existing_features": [
     {
-      "id": "feature-support-two-profile-routes-profile-read-only-profile-view-and-profile-edit-edit-form-routing-must-work-with-the-current-popstate-based-navigation-no-new-router-dependency-and-must-be-reachable-from-the-existing-header-user-menu-navigation",
-      "title": "Support two profile routes: /profile (read-only profile view) and /profile/edit (edit form). Routing must work with the current popstate-based navigation (no new router dependency) and must be reachable from the existing header/user menu navigation.",
+      "id": "feature-update-the-secretary-frontend-logic-to-check-whether-an-instance-exists-for-the-selected-or-matched-city-county-or-state-using-a-backend-call-rather-than-scanning-all-proposals-client-side-the-secretary-must-determine-instance-availability-based-on-the-canonical-computed-instance-name-for-the-selected-geography-and-then-route-the-user-either-to-view-an-existing-instance-or-to-the-create-instance-flow",
+      "title": "Update the Secretary frontend logic to check whether an instance exists for the selected (or matched) city, county, or state using a backend call rather than scanning all proposals client-side. The Secretary must determine instance availability based on the canonical computed instance name for the selected geography and then route the user either to view an existing instance or to the create-instance flow.",
       "reqIds": [
-        "REQ-1"
+        "REQ-4"
       ],
       "version": 1
     },
     {
-      "id": "feature-implement-the-profile-ui-to-display-the-core-profile-fields-in-a-clean-mobile-first-layout-using-existing-tailwind-shadcn-components-and-whisper-styling-the-view-must-include-avatar-display-name-username-handle-bio-role-badges-location-join-date-contribution-stats-external-links-and-recent-activity-summary-for-any-fields-not-yet-available-from-the-backend-render-sensible-placeholders-empty-states-without-breaking-existing-functionality",
-      "title": "Implement the /profile UI to display the core profile fields in a clean, mobile-first layout using existing Tailwind + shadcn components and Whisper styling. The view must include: avatar, display name, username/handle, bio, role/badges, location, join date, contribution stats, external links, and recent activity summary. For any fields not yet available from the backend, render sensible placeholders/empty states without breaking existing functionality.",
+      "id": "feature-prevent-the-app-from-showing-a-blank-white-screen-when-a-runtime-error-occurs-by-adding-a-top-level-react-error-boundary-and-a-user-visible-fallback-screen-in-english-that-indicates-the-app-failed-to-load-and-instructs-the-user-to-refresh-ensure-the-fallback-renders-even-if-a-lazily-loaded-page-throws-during-import",
+      "title": "Prevent the app from showing a blank/white screen when a runtime error occurs by adding a top-level React error boundary and a user-visible fallback screen in English that indicates the app failed to load and instructs the user to refresh. Ensure the fallback renders even if a lazily loaded page throws during import.",
       "reqIds": [
-        "REQ-2"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-implement-the-profile-edit-ui-as-an-edit-form-that-lets-the-authenticated-user-update-display-name-bio-avatar-upload-removal-external-links-1-3-and-preferences-at-minimum-provide-ui-controls-for-preferences-even-if-persistence-is-deferred-the-edit-page-must-provide-save-cancel-behavior-and-route-back-to-profile-on-cancel-and-on-successful-save",
-      "title": "Implement the /profile/edit UI as an edit form that lets the authenticated user update: display name, bio, avatar upload/removal, external links (1–3), and preferences (at minimum provide UI controls for preferences even if persistence is deferred). The edit page must provide Save/Cancel behavior and route back to /profile on cancel and on successful save.",
-      "reqIds": [
-        "REQ-3"
+        "REQ-5"
       ],
       "version": 1
     }
@@ -38,24 +30,47 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Add basic profile routes/pages: /profile (view) and /profile/edit (edit)",
+      "summary": "Add Secretary-specific Motoko query endpoints: getStateById, getCountyById, getCityById, getTop50IssuesForLocation",
       "reqIds": [],
       "status": "pending"
     },
     {
       "id": "AR-2",
-      "summary": "Implement Profile page UI showing core fields (avatar, display name, username, bio, role/badges, location, join date, stats, links, activity)",
+      "summary": "Add Motoko query endpoint searchSimilarCityNames for secretary flow",
       "reqIds": [],
       "status": "pending"
     },
     {
       "id": "AR-3",
-      "summary": "Implement Edit Profile form to update name, bio, avatar, links, and preferences (frontend flow)",
+      "summary": "Add secretary logic to check whether an instance exists for a selected or matched city/county/state",
       "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-4",
+      "summary": "Add Secretary-specific Motoko query endpoints that return a single geography record by its hierarchicalId: getStateById(hierarchicalId), getCountyById(hierarchicalId), and getCityById(hierarchicalId). These endpoints must be read-only queries and must not modify any existing geography data or change existing geography query endpoints.",
+      "reqIds": [
+        "REQ-1"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-5",
+      "summary": "Add a Secretary-specific Motoko query endpoint getTop50IssuesForLocation that returns the top-50 issue/category strings for a given geography level (place/county/state) and optional hierarchicalId input. Use the existing stable in-canister category lists (city/county/state) as the data source.",
+      "reqIds": [
+        "REQ-2"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-6",
+      "summary": "Add a Motoko query endpoint searchSimilarCityNames that takes a user-provided city search string and returns a short list of matching USPlace results from the existing geography data (case-insensitive match; safe behavior for empty/very short inputs).",
+      "reqIds": [
+        "REQ-3"
+      ],
       "status": "pending"
     }
   ],
-  "gameProjectType": "none",
   "projectName": "Whisper",
   "clarification_mode": "instant",
   "clarification_rounds": 0
